k8/sol1-deploy-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resourceapi
  namespace: smartcow
  labels:
    app: resourceapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resourceapi
  template:
    metadata:
      labels:
        app: resourceapi
    spec:
      containers:
        - name: resourceapi
          image: mahesh1985/sys-resource-view-api:03429351723713db7c7834ad146c6e1fe4b4c091
          ports:
            - containerPort: 5000

# can add resource requirements, readiness probes and liveness probes

---
apiVersion: v1
kind: Service
metadata:
  name: resourceapi
  namespace: smartcow
  labels:
    app: resourceapi
spec:
  type: ClusterIP
  selector:
    app: resourceapi
  ports:
    - port: 5000
      targetPort: 5000
