k8/sol1-deploy-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resourceweb
  namespace: smartcow
  labels:
    app: resourceweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resourceweb
  template:
    metadata:
      labels:
        app: resourceweb
    spec:
      containers:
        - name: resourceweb
          image: mahesh1985/sys-resource-view-web:03429351723713db7c7834ad146c6e1fe4b4c091
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: resourceweb
  namespace: smartcow
  labels:
    app: resourceweb
spec:
  type: NodePort
  selector:
    app: resourceweb
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30000
